--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  intl: ^0.17.0
+  intl: 0.18.1
   provider: ^6.0.5
   shared_preferences: ^2.0.18
   flutter_easyloading: ^3.0.5
